...
    <!-- BOTTOM NAVIGATION -->
    <string name="title_map_view" translatable="false">Map View</string>
    <string name="title_list_view" translatable="false">List View</string>
    <string name="title_workmates">Workmates</string>

    <!-- NAVIGATION DRAWER-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_your_lunch">Your Lunch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">logout</string>
...
    <string name="textview" translatable="false">textview</string>

    <!-- CHAT ACTIVITY -->
    <string name="menu_chat" translatable="false">chat</string>
    <string name="error_no_internet">None internet connexion !</string>
    <string name="connection_succeed">Autentification success</string>
    <string name="notification_title">Update username</string>
    <string name="button_update_account">Update username</string>
    <string name="button_delete_account">Delete account</string>
    <string name="popup_message_confirmation_delete_account">Do you really want delete your account ?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="rayon_de_recherche">Search radius</string>
...
