...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_lunch"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/menu_your_lunch" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
...
